--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -23,6 +23,27 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout
+        id: checkout
         uses: actions/checkout@v4.1.5
         with:
           fetch-depth: 0 # Necessary to fetch all tags and history
+      - name: Determine Next Version
+        id: next_version
+        run: |
+          # Fetch all tags
+          git fetch --tags
+          
+          # Get the latest tag, assume semver, and sort.
+          LATEST_TAG=$(git tag -l | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n1)
+          
+          # If there's no tag yet, start with v0.0.0. Used for new repos
+          if [ -z "$LATEST_TAG" ]; then
+            LATEST_TAG="v0.0.0"
+          fi
+          
+          # Increment the patch version
+          NEXT_TAG=$(echo $LATEST_TAG | awk -F. '{print $1"."$2"."$3+1}')
+          
+          # Output the next version
+          echo "::set-output name=tag::$NEXT_TAG"
+          echo "Next version: $NEXT_TAG"
