--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -5,10 +5,10 @@ name: Build and Push Docker image to AWS ECR
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  # push:
+  #   branches: [ "main" ]
+  # pull_request:
+  #   branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -45,7 +45,8 @@ jobs:
           NEXT_TAG=$(echo $LATEST_TAG | awk -F. '{print $1"."$2"."$3+1}')
           
           # Output the next version
-          echo "::set-output name=tag::$NEXT_TAG"
+          echo "tag=$NEXT_TAG" >> $GITHUB_ENV
+          # echo "::set-output name=tag::$NEXT_TAG"
           echo "Next version: $NEXT_TAG"
           echo "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
       - name: Create Release
@@ -54,8 +55,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN_2 }}
         with:
-          tag_name: ${{ steps.next_version.outputs.tag }}
-          release_name: Release ${{ steps.next_version.outputs.tag }}
+          tag_name: ${{ env.tag }}
+          release_name: Release ${{ env.tag }} 
+          # tag_name: ${{ steps.next_version.outputs.tag }}
+          # release_name: Release ${{ steps.next_version.outputs.tag }}
           draft: false
           prerelease: false
       - name: Configure AWS credentials
@@ -72,15 +75,18 @@ jobs:
         run: |
           REPO_NAME="${GITHUB_REPOSITORY##*/}"
           echo "REPO_NAME=$REPO_NAME" >> $GITHUB_ENV
-          echo "::set-output name=repo_name::$REPO_NAME"
+          # echo "::set-output name=repo_name::$REPO_NAME"
+          echo "$REPO_NAME"
       - name: Build Docker image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ env.REPO_NAME }}
           IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
         run: |
+          echo "REPO_NAME = $ECR_REPOSITORY"
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           echo "IMAGE_NAME=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
+          echo "IMAGE_NAME = $IMAGE_NAME"
       - name: Push Docker image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
