--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -81,7 +81,8 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ env.REPO_NAME }}
-          IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
+          # IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
+          IMAGE_TAG: ${{ env.tag }}
         run: |
           echo "REPO_NAME = $ECR_REPOSITORY"
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
@@ -91,7 +92,8 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ env.ECR_REPOSITORY}}
-          IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
+          # IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
+          IMAGE_TAG: ${{ env.tag }}
         run: |
           # Tag the image as latest
           docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
