--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -84,14 +84,14 @@ jobs:
           # IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
           IMAGE_TAG: ${{ env.tag }}
         run: |
-          echo "REPO_NAME = $ECR_REPOSITORY"
+          echo "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           echo "IMAGE_NAME=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
-          echo "IMAGE_NAME = $IMAGE_NAME"
+          echo "$IMAGE_NAME"
       - name: Push Docker image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ env.ECR_REPOSITORY}}
+          # ECR_REPOSITORY: ${{ env.ECR_REPOSITORY}}
           # IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
           IMAGE_TAG: ${{ env.tag }}
         run: |
