--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Push Docker image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          # ECR_REPOSITORY: ${{ env.ECR_REPOSITORY}}
+          ECR_REPOSITORY: ${{ env.REPO_NAME }}
           # IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
           IMAGE_TAG: ${{ env.tag }}
         run: |
