--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -123,6 +123,7 @@ jobs:
           echo "    restart: always" >> $DCF
           echo "    mem_limit: 256M" >> $DCF
           echo "    cpus: 0.5" >> $DCF
+          cat $DCF
       # - name: Deploy to EC2
       #   env:
       #     AWS_REGION: ${{ secrets.AWS_REGION}}
