--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -52,18 +52,18 @@ jobs:
           echo "tag=$NEXT_TAG" >> $GITHUB_ENV
           # echo "::set-output name=tag::$NEXT_TAG"
           echo "Next version: $NEXT_TAG"
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN_2 }}
-        with:
-          tag_name: ${{ env.tag }}
-          release_name: Release ${{ env.tag }} 
-          # tag_name: ${{ steps.next_version.outputs.tag }}
-          # release_name: Release ${{ steps.next_version.outputs.tag }}
-          draft: false
-          prerelease: false
+      # - name: Create Release
+      #   id: create_release
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN_2 }}
+      #   with:
+      #     tag_name: ${{ env.tag }}
+      #     release_name: Release ${{ env.tag }} 
+      #     # tag_name: ${{ steps.next_version.outputs.tag }}
+      #     # release_name: Release ${{ steps.next_version.outputs.tag }}
+      #     draft: false
+      #     prerelease: false
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -80,30 +80,30 @@ jobs:
           echo "REPO_NAME=$REPO_NAME" >> $GITHUB_ENV
           # echo "::set-output name=repo_name::$REPO_NAME"
           echo "GitHub Repository = $REPO_NAME"
-      - name: Build Docker image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ env.REPO_NAME }}
-          # IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
-          IMAGE_TAG: ${{ env.tag }}
-        run: |
-          echo "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          echo "IMAGE_NAME=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
-          echo "ECR Image Name = $IMAGE_NAME"
-      - name: Push Docker image to Amazon ECR
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ env.REPO_NAME }}
-          # IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
-          IMAGE_TAG: ${{ env.tag }}
-        run: |
-          # Tag the image as latest
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          # Push the specific version tag
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          # Push the latest tag
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+      # - name: Build Docker image
+      #   env:
+      #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #     ECR_REPOSITORY: ${{ env.REPO_NAME }}
+      #     # IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
+      #     IMAGE_TAG: ${{ env.tag }}
+      #   run: |
+      #     echo "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+      #     docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+      #     echo "IMAGE_NAME=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
+      #     echo "ECR Image Name = $IMAGE_NAME"
+      # - name: Push Docker image to Amazon ECR
+      #   env:
+      #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #     ECR_REPOSITORY: ${{ env.REPO_NAME }}
+      #     # IMAGE_TAG: ${{ steps.next_version.outputs.tag }}
+      #     IMAGE_TAG: ${{ env.tag }}
+      #   run: |
+      #     # Tag the image as latest
+      #     docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
+      #     # Push the specific version tag
+      #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      #     # Push the latest tag
+      #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
       - name: Create Docker Compose File
         id: docker_compose_file_create
         env:
@@ -157,8 +157,8 @@ jobs:
           # $SSH_COMMAND "cd /home/$EC2_USER/docker/ && sudo docker pull $ECR_REGISTRY/$ECR_REPOSITORY:latest && sudo docker compose -f $DCF up -d --force-recreate"
           
           # If Docker Compose not in  EC2 then run below. Pull and run the Docker container on EC2 using Docker Run
-          $SSH_COMMAND "cd /home/$EC2_USER/docker/ && sudo docker pull $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          $SSH_COMMAND sudo docker run -d --name devops_gitactions_service -v ./data:/data -p 80:8080 --memory 256M --cpus 0.5 --restart always $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          $SSH_COMMAND "cd /home/$EC2_USER/docker/ && sudo docker pull $ECR_REGISTRY/$ECR_REPOSITORY:latest"
+          $SSH_COMMAND "sudo docker run -d --name devops_gitactions_service -v ./data:/data -p 80:8080 --memory 256M --cpus 0.5 --restart always $ECR_REGISTRY/$ECR_REPOSITORY:latest"
           
           # Cleanup PEM key
           rm -f ec2.pem
