sonar.python.version=3.12.2 added

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=sakthivel-ponnusamy_devops_gitactions
 sonar.organization=sakthivel-ponnusamy
-
+sonar.python.version=3.12.2
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=devops_gitactions
 #sonar.projectVersion=1.0
