--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -24,8 +24,8 @@ jobs:
     env:
       AWS_REGION: ${{ secrets.AWS_REGION}}
       EC2_PEM_KEY: ${{ secrets.EC2_PEM_KEY }}
-      EC2_HOST: ${{ secrets.EC2_HOST }}
-      EC2_USER: ${{ secrets.EC2_USER }}
+      EC2_HOST: ${{ vars.EC2_HOST }}
+      EC2_USER: ${{ vars.EC2_USER }}
       CONTAINER_NAME: "devops_gitactions-service"
     steps:
       - name: Print Job Run URL
