--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -17,6 +17,8 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build-and-push:
+    # Mention the Environment
+    environment: development
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -106,6 +108,7 @@ jobs:
           # echo "::set-output name=repo_name::$REPO_NAME"
           echo "GitHub Repository = $REPO_NAME"
       - name: Build Docker image
+        if: ${{ vars.DO_BUILD_DOCKER_IMAGE == 1 }}
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ env.REPO_NAME }}
@@ -174,6 +177,7 @@ jobs:
       ###               Deploy to EC2 using SSH               ###
       ########################################################### 
       - name: Deploy to EC2
+        if: ${{ vars.DO_DEPLOY_TO_EC2 == 1 }}
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ env.REPO_NAME }}
