--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -18,7 +18,8 @@ jobs:
   # This workflow contains a single job called "build"
   build-and-push:
     # Mention the Environment
-    environment: development
+    # environment: development
+    
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
