--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -17,11 +17,11 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build-and-push:
-    # Mention the Environment
-    # environment: development
-
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Mention the Environment
+    environment: development
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     env:
