--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -18,8 +18,8 @@ jobs:
   # This workflow contains a single job called "build"
   build-and-push:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
     # Mention the Environment
     environment: development
 
