--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -6,9 +6,9 @@ name: Build and Push Docker image to AWS ECR
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   # push:
-  #   branches: [ "main" ]
-  # pull_request:
-  #   branches: [ "main" ]
+    # branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -18,8 +18,8 @@ jobs:
   # This workflow contains a single job called "build"
   build-and-push:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    # runs-on: self-hosted
+    # runs-on: ubuntu-latest
+    runs-on: self-hosted
     # Mention the Environment
     environment: development
 
