--- a/.github/workflows/build_push_ecr_ec2.yml
+++ b/.github/workflows/build_push_ecr_ec2.yml
@@ -9,6 +9,7 @@ on:
     # branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    types: [opened, closed]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -17,6 +18,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build-and-push:
+    if: ${{ $GITHUB_REF == "/refs/heads/main" }}
     # The type of runner that the job will run on
     # runs-on: ubuntu-latest
     runs-on: self-hosted
